generierte TypeScript-Models aktualisiert
